feat: filter account on cos by status
